--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "yiisoft/yii2-codeception": "*",
         "yiisoft/yii2-debug": "*",
         "yiisoft/yii2-gii": "*",
+        "twbs/bootstrap": "v4.0.0-alpha.2",
         "yiisoft/yii2-faker": "*"
     },
     "config": {
